--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -108,6 +108,11 @@
     <string name="pref_statusbar_batt_style_stock">Stock</string>
     <string name="pref_statusbar_batt_style_percent">Stock w/ percentage</string>
     <string name="pref_statusbar_batt_style_hidden">Hidden</string>
+    <string name="pref_statusbar_clock_am_pm_style_title">Clock AM/PM style</string>
+    <string name="pref_statusbar_clock_am_pm_style_summary">Choose a clock AM/PM style</string>
+    <string name="pref_statusbar_clock_am_pm_style_normal">Normal</string>
+    <string name="pref_statusbar_clock_am_pm_style_small">Small</string>
+    <string name="pref_statusbar_clock_am_pm_style_gone">Hidden</string>
 
         <!-- Performance Settings -->
     <string name="performance_memory_title">Memory</string>
