Toolbox: KK update
comment unmerged settings
translucent/rotation on lockscreen

Change-Id: Id9092e61af9124ef7c459b74f773455286d7af7e

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -54,6 +54,10 @@
     <string name="pref_lockscreen_general_background_result_successful">Background changed successfully</string>
     <string name="pref_lockscreen_general_background_result_not_successful">Background could not be changed</string>
     <string name="pref_lockscreen_general_background_dialog_title">Choose color</string>
+    <string name="pref_lockscreen_general_translucent_title">Enable translucent decor</string>
+    <string name="pref_lockscreen_general_translucent_summary"></string>
+    <string name="pref_lockscreen_general_rotation_title">Allow rotation</string>
+    <string name="pref_lockscreen_general_rotation_summary"></string>
 
         <!-- Lockscreen >> Styles-->
     <string name="pref_lockscreen_style_picker_unavailable">This style is unavailable for this device!\nPlease choose another style.</string>
