EVToolbox: Add back navigation bar customization.
Change-Id: I6431a611f3107fd1022df11362d1d2aa27b2f436

cmparts: Add button settings

 * Porting from CM13

Change-Id: I0ba91fc3c0a16a49646f269f9cbfd134a2212103

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -133,4 +133,9 @@
     <string name="style_dark_overlay_default">Default</string>
     <string name="style_dark_overlay_black">Black</string>
     <string name="style_permission_error">Storage access permission is needed to analyze your wallpaper, please grant it to use this feature</string>
+
+    <!-- Navigation Bar -->
+    <string name="navigation_bar_category">Navigation bar</string>
+    <string name="navigation_bar_title">Buttons and layout</string>
+
 </resources>
