Toolbox: update zram handling
when new zram value chosen, we calculate size and write
a new fstab for zram, on boot complete we check its existence
and set a prop so init can setup the swap space

Change-Id: Ieed4af0342782b9e0911f7948ad91d9b0d815714

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -27,6 +27,7 @@
     <string name="later">Later</string>
     <string name="flash">Flash</string>
     <string name="send">Send</string>
+    <string name="reboot_required">Reboot required</string>
 
         <!-- Main app strings ( immediate tabs ) -->
     <string name="tab_title_lockscreen">Lockscreen</string>
@@ -124,7 +125,8 @@
 
         <!-- Performance >> MemoryManagement -->
     <string name="pref_zram_title">zRam</string>
-    <string name="pref_zram_summary">Compress memory for increased virtual capacity (requires reboot)</string>
+    <string name="pref_zram_summary">Compress memory for increased virtual capacity</string>
+    <string name="pref_zram_reboot_text">New zRam settings will be applied on next boot</string>
     <string name="pref_ksm_title">Kernel samepage merging</string>
     <string name="pref_ksm_summary">Ksm reduces physical memory requirements and improves performance</string>
 
