--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -35,6 +35,7 @@
     <string name="tab_title_interface">Interface</string>
     <string name="tab_title_performance">Performance</string>
     <string name="tab_title_superuser">Superuser</string>
+    <string name="tab_title_system">System</string>
     <string name="tab_title_bugreport">Bug Report</string>
     <string name="drawer_open">Open navigation drawer</string>
     <string name="drawer_close">Close navigation drawer</string>
@@ -118,6 +119,14 @@
     <string name="pref_statusbar_clock_am_pm_style_normal">Normal</string>
     <string name="pref_statusbar_clock_am_pm_style_small">Small</string>
     <string name="pref_statusbar_clock_am_pm_style_gone">Hidden</string>
+
+        <!-- System -->
+
+        <!-- System >> Network -->
+    <string name="system_network_title">Network</string>
+    <string name="pref_system_hostname_title">Device Hostname</string>
+    <string name="pref_system_sshd_title">Enable sshd</string>
+    <string name="pref_system_sshd_summary">Allow remote connections over ssh</string>
 
         <!-- Performance Settings -->
     <string name="performance_memory_title">Memory</string>
