Add the ability for device-specific settings inside the toolbox
Usage example:

  BOARD_DEVICE_SETTINGS := device/lge/hammerhead/DeviceSettings

When a new setting category is needed the class name needs to be added
to DeviceCategory.java in the CLASS_LIST array, along with the string resource
added to strings.xml and the id added to CLASS_NAME_IDS. This will be a simple
list of possible settings fragments, try to keep the naming as general as
possible so we can reuse them.

Make sure to extend DeviceSettingsFragment, this will allow you access
to restore settings on boot completion, and possibly other features down the
road.

Initial imports are DeviceHaptic & DeviceTouchscreen for haptic feedback
and touchscreen tuning.

Change-Id: I80b2af9d06e5c92224b4f51f40e043d7447bb149

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -227,9 +227,6 @@
     <string name="superuser_app_all_commands">All commands</string>
 
     <string name="superuser_app_policy_info_delete">Delete app policy</string>
-<!--
-    <string name=""></string>
--->
 
     <string name="superuser_description">full permissions to all device features and storage</string>
     <string name="superuser_description_more">Superuser grants full access to all device features and storage, including the secure and sensitive hardware elements of your device. This permission is potentially dangerous.</string>
@@ -285,5 +282,10 @@
     <string name="logcat_post_author">EVLogcat Uploader</string>
     <string name="logcat_post_title">Logcat: %1$s</string>
     <string name="logcat_notification_title">Logcat Uploaded</string>
+
+    <!-- Device Settings -->
+    <string name="device_settings_title">Device Settings</string>
+    <string name="device_touchscreen_title">Touchscreen</string>
+    <string name="device_haptic_title">Haptic</string>
 
 </resources>
