--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -42,4 +42,32 @@
 
     <!-- DO NOT TRANSLATE Empty summary for dynamic preferences -->
     <string name="summary_empty" translatable="false"></string>
+
+    <!-- Hardware key -->
+    <string name="button_settings_title">Buttons</string>
+
+    <!-- Hardware key categories -->
+    <string name="power_key_title">Power button</string>
+    <string name="home_key_title">Home button</string>
+    <string name="back_key_title">Back button</string>
+    <string name="menu_key_title">Menu button</string>
+    <string name="assist_key_title">Search button</string>
+    <string name="appswitch_key_title">Recents button</string>
+
+    <!-- Hardware key rebinding -->
+    <string name="short_press_title">Short press action</string>
+    <string name="long_press_title">Long press action</string>
+    <string name="double_tap_title">Double tap action</string>
+
+    <!-- Hardware key actions -->
+    <string name="action_nothing">No action</string>
+    <string name="action_menu">Open/close menu</string>
+    <string name="action_app_switch">Recent apps switcher</string>
+    <string name="action_search">Search assistant</string>
+    <string name="action_voice_search">Voice search</string>
+    <string name="action_in_app_search">In-app search</string>
+    <string name="action_launch_camera">Launch camera</string>
+    <string name="action_sleep">Turn screen off</string>
+    <string name="action_last_app">Last app</string>
+    <string name="action_split_screen">Split screen</string>
 </resources>
