EVToolbox:  Setup home key to wake device (2/2)
Change-Id: Ia2a2a39fa78cd0bc90d21cf0a1d2f69774f77766

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -76,6 +76,8 @@
     <string name="pref_trackball_wake_toggle_summary">Trackball presses wake device</string>
     <string name="pref_volume_wake_toggle_title">Volume button wake</string>
     <string name="pref_volume_wake_toggle_summary">Volume button presses wake device</string>
+    <string name="pref_home_wake_toggle_title">Home button wake</string>
+    <string name="pref_home_wake_toggle_summary">Home button presses wake device</string>
     <string name="pref_lockscreen_music_controls_volbtn_title">Volume music control</string>
     <string name="pref_lockscreen_music_controls_volbtn_summary">Long press up to skip; down for previous</string>
     <string name="pref_interface_category_tabletdpi">Tablet &amp; DPI</string>
