--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -285,4 +285,14 @@
     <string name="pref_settings_toolbox_disable_title">Disable toolbox features</string>
     <string name="pref_settings_toolbox_disable_summary">This will disable toolbox features.</string>
 
+    <!-- Color Picker -->
+    <string name="dialog_color_picker">Color Picker</string>
+    <string name="press_color_to_apply">Press on color below to apply</string>
+    <string name="arrow_right">→</string>
+    <string name="arrow_down">↓</string>
+    <string name="hex">Hex:</string>
+    <string name="hex_hint">#ff000000</string>
+    <string name="set">Set</string>
+    <string name="color_default">Default</string>
+
 </resources>
