--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -123,6 +123,8 @@
     <string name="pref_statusbar_clock_am_pm_style_normal">Normal</string>
     <string name="pref_statusbar_clock_am_pm_style_small">Small</string>
     <string name="pref_statusbar_clock_am_pm_style_gone">Hidden</string>
+    <string name="pref_statusbar_quick_pulldown_title">Quick QS Pulldown</string>
+    <string name="pref_statusbar_quick_pulldown_summary">Expand Quick Settings in a single swipe</string>
 
         <!-- System -->
 
