Toolbox: add power profiles support
Change-Id: If40b649120328ff978cc3cbf95b09e09c6a73693

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -150,6 +150,7 @@
     <string name="performance_processor_title">Processor</string>
 
         <!-- Performance >> General -->
+    <string name="perf_profile_title">Battery mode</string>
     <string name="pref_zram_title">zRam</string>
     <string name="pref_zram_summary">Compress memory for increased virtual capacity</string>
     <string name="pref_zram_reboot_text">New zRam settings will be applied on next boot</string>
