Toolbox: Squashed update for performance from CM
Settings: Forward port Change behavior when back pressed in PerformanceSettings

When back key pressed, finish this activity if user does NOT accept 'Ok'
in warning dialog rather than show it.
Id: Ied763db4f76a3a2a36f134bd93a0f18047c6cf5c

Change-Id: I07d41d43d00e4fb42ad526d27ee9188d830906ea

Performance profiles

This changes adds support for custom performance profiles through overlays. Supported
devices should define config_perf_profile_prop with the proper system property to be set
and fill an init.rc file with the appropiate handlers for every defined performance profile..
Patchset 2: Rebased
            New simplified strings
Patchset 3: Fix build
Patchset 4: Rebased

Change-Id: I5a6612db94da3c09d8ec2e8920bf9516f62d0024
Signed-off-by: Jorge Ruesga <jorge@ruesga.com>

Settings: QS performance profiles tile

Requires http://review.cyanogenmod.org/#/c/51776/

Patchset 2: Fix not null comparation
Patchset 3: Added suggestions
Patchset 4: Fix string
Patchset 5: Rebased
Patchset 6: Rebased
            Move setCurrentValue() inside mPerfProfilePref null check

Change-Id: I578d84002b00e0a7c58cdcaf2a3735bf6bbfdabf
Signed-off-by: Jorge Ruesga <jorge@ruesga.com>

Brings performance settings up-to-date with cm-10.2

Includes the following cm-10.2 commits:
http://review.cyanogenmod.org/30667 Performance: BootReceiver: set CPU min/max freqs before CPU governor
http://review.cyanogenmod.org/31886 Adding configurability of frequency cap (min/max) files' path.
http://review.cyanogenmod.org/48007 Cleanup: remove useless checks.
http://review.cyanogenmod.org/51295 Cleanup performance settings strings

Change-Id: If94d02745606e9bdca92a89ea7129a44878226a2

Fix confusing warning dialog behaviour.

The settings app closing when pressing back while the dialog is shown or
clicking outside of the dialog was confusing for the user. Instead, make
sure the user has to acknowledge the dialog.

Change-Id: I8ffdf6a2ede8b67176fd22a13d7046a707b5

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -157,7 +157,6 @@
     <string name="pref_ksm_summary">Ksm reduces physical memory requirements and improves performance</string>
 
         <!-- Performance >> Processor -->
-    <string name="pref_processor_summary">Change CPU governor and clock speed</string>
     <string name="pref_cpu_cur_freq_title">Current CPU frequency</string>
     <string name="pref_cpu_governors_title">CPU governor</string>
     <string name="pref_cpu_governors_summary">%S</string>
@@ -167,6 +166,8 @@
     <string name="pref_cpu_max_freq_summary">%s</string>
     <string name="pref_cpu_set_on_boot">Set on boot</string>
     <string name="pref_cpu_set_on_boot_summary">Restore the processor settings on boot</string>
+    <string name="pref_cpu_io_sched_title">I/O scheduler</string>
+    <string name="pref_cpu_io_sched_summary">%S</string>
 
         <!-- GalleryPickerPreference -->
     <string name="item_count">%1$d/%2$d</string>
